--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,7 +40,7 @@ html
 					#feed(class='_header_3_icon')
 						img(src='/images/like.png' height='35px' width='35px')
 					#user(class='_header_3_icon')
-						a(href='/'+authId)
+						a(href='/'+sessionId)
 							img(src='/images/user.png' height='35px' width='35px')
 		article
 			block content
