--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,113 +7,157 @@
   border-style: solid;
   border-color: rgba(158, 158, 158, 0.35);
   border-width: 1px;
+  box-shadow: 2px 5px 10px 1px #b5b5b5;
   display: inline-block;
   background-color: #fff;
   text-align: center; }
-  #timeline #newPost #closeIcon {
-    display: none;
-    float: right;
-    margin-top: 10px;
-    margin-right: 10px;
-    cursor: pointer; }
-  #timeline #newPost #plusIcon {
-    margin-top: 30px;
-    cursor: pointer; }
-  #timeline #newPost #plusText {
-    color: #63aef3;
-    padding-top: 10px;
-    font-weight: 500;
-    cursor: pointer; }
-  #timeline #newPost #searchVideo {
-    display: none;
-    margin-top: 40px;
-    width: 100%;
-    height: 60px; }
-    #timeline #newPost #searchVideo input {
-      width: 60%;
-      height: 30px;
-      margin-top: 10px;
-      border-radius: 5px;
-      border-style: solid;
-      border-width: 1px;
-      padding-left: 10px;
-      border-color: rgba(158, 158, 158, 0.35); }
-      #timeline #newPost #searchVideo input:focus {
-        outline: none; }
-  #timeline #newPost #preview {
-    display: none;
-    height: 370px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 10px; }
-    #timeline #newPost #preview .searchResult {
-      display: inline-flex;
-      float: left;
-      height: 70px;
-      width: 100%;
-      cursor: pointer;
-      margin-bottom: 5px; }
-      #timeline #newPost #preview .searchResult .thumbnail {
-        margin-right: 20px; }
-      #timeline #newPost #preview .searchResult .videoTitle {
-        padding-top: 25px; }
-  #timeline #newPost #contents {
-    display: none;
-    width: 100%;
-    height: 410px;
-    margin-top: 40px; }
-    #timeline #newPost #contents #video {
-      height: 300px; }
-      #timeline #newPost #contents #video iframe {
-        width: 100%; }
-    #timeline #newPost #contents #description p {
-      margin: 0px; }
-      #timeline #newPost #contents #description p textarea {
-        padding: 2%;
-        width: 96%;
-        height: 85px;
-        font-size: small;
-        border-style: hidden; }
-        #timeline #newPost #contents #description p textarea:focus {
-          outline: none; }
-  #timeline #newPost #buttonGroup {
-    display: none;
-    width: 100%;
-    height: 50px;
-    border-top-width: 1px;
-    border-top-style: solid;
-    border-top-color: rgba(158, 158, 158, 0.35); }
-    #timeline #newPost #buttonGroup #backButton {
-      width: 50%;
-      padding-top: 15px;
-      display: inline-block;
-      cursor: pointer;
-      border-right-width: 1px;
-      border-right-style: solid;
-      border-right-color: rgba(158, 158, 158, 0.35); }
-    #timeline #newPost #buttonGroup #uploadButton {
-      width: 50%;
-      padding-top: 15px;
-      display: inline-block;
-      cursor: pointer; }
+
+#timeline #newPost #closeIcon {
+  display: none;
+  float: right;
+  margin-top: 10px;
+  margin-right: 10px;
+  cursor: pointer; }
+
+#timeline #newPost #plusIcon {
+  margin-top: 30px;
+  cursor: pointer; }
+
+#timeline #newPost #plusText {
+  color: #63aef3;
+  padding-top: 10px;
+  font-weight: 500;
+  cursor: pointer; }
+
+#timeline #newPost #searchVideo {
+  display: none;
+  margin-top: 40px;
+  width: 100%;
+  height: 60px; }
+
+#timeline #newPost #searchVideo input {
+  width: 60%;
+  height: 30px;
+  margin-top: 10px;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  padding-left: 10px;
+  border-color: rgba(158, 158, 158, 0.35); }
+
+#timeline #newPost #searchVideo input:focus {
+  outline: none; }
+
+#timeline #newPost #preview {
+  display: none;
+  height: 370px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 10px; }
+
+#timeline #newPost #preview .searchResult {
+  display: inline-flex;
+  float: left;
+  height: 70px;
+  width: 100%;
+  cursor: pointer;
+  margin-bottom: 5px; }
+
+#timeline #newPost #preview .searchResult .thumbnail {
+  margin-right: 20px; }
+
+#timeline #newPost #preview .searchResult .videoTitle {
+  padding-top: 25px; }
+
+#timeline #newPost #contents {
+  display: none;
+  width: 100%;
+  height: 410px;
+  margin-top: 40px; }
+
+#timeline #newPost #contents #video {
+  height: 300px; }
+
+#timeline #newPost #contents #video iframe {
+  width: 100%; }
+
+#timeline #newPost #contents #description p {
+  margin: 0px; }
+
+#timeline #newPost #contents #description p textarea {
+  padding: 2%;
+  width: 96%;
+  height: 85px;
+  font-size: small;
+  border-style: hidden; }
+
+#timeline #newPost #contents #description p textarea:focus {
+  outline: none; }
+
+#timeline #newPost #buttonGroup {
+  display: none;
+  width: 100%;
+  height: 50px;
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: rgba(158, 158, 158, 0.35); }
+
+#timeline #newPost #buttonGroup #backButton {
+  width: 50%;
+  padding-top: 15px;
+  display: inline-block;
+  cursor: pointer;
+  border-right-width: 1px;
+  border-right-style: solid;
+  border-right-color: rgba(158, 158, 158, 0.35); }
+
+#timeline #newPost #buttonGroup #uploadButton {
+  width: 50%;
+  padding-top: 15px;
+  display: inline-block;
+  cursor: pointer; }
+
 #timeline #posts {
   margin-left: 20%;
   margin-right: 20%;
   width: 60%;
   display: inline-block; }
-  #timeline #posts .post {
-    margin-top: 25px;
-    width: 100%;
-    height: 500px;
-    border-radius: 5px;
-    border-style: solid;
-    border-color: rgba(158, 158, 158, 0.35);
-    border-width: 1px;
-    background-color: #fff; }
-    #timeline #posts .post .post-header {
-      height: 70px;
-      border-bottom-style: solid;
-      border-bottom-color: rgba(158, 158, 158, 0.35);
-      border-width: 1px; }
 
-/*# sourceMappingURL=home.css.map */
+#timeline #posts .post {
+  margin-top: 25px;
+  width: 100%;
+  height: 500px;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: rgba(158, 158, 158, 0.35);
+  border-width: 1px;
+  background-color: #fff;
+  box-shadow: 2px 5px 10px 1px #b5b5b5; }
+
+#timeline #posts .post .post-header {
+  height: 70px;
+  width: 100%;
+  border-bottom-style: solid;
+  border-bottom-color: rgba(158, 158, 158, 0.35);
+  border-width: 1px;
+  display: inline-flex; }
+
+#timeline #posts .post .post-header .profileImage {
+  width: 8%;
+  border-radius: 50%;
+  background-image: url(/images/user_profile.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: 3%;
+  margin-top: 10px; }
+
+#timeline #posts .post .post-header .profileId {
+  margin-left: 5%;
+  margin-top: 15px;
+  font-size: medium;
+  font-weight: 700;
+  margin-left: 3%;
+  margin-top: 25px; }
+
+#timeline #posts .post .post-video {
+  height: 430px; }
