--- a/views/home.jade
+++ b/views/home.jade
@@ -1,7 +1,7 @@
 extends ./layout
 block content
 	#timeline(class='body-center')
-		#newPost(data-user_id=authId)
+		#newPost(data-user_id=sessionId)
 			#closeIcon
 				img(src='/images/cancel.png' height='20px' width='20px')
 			#plusIcon 
@@ -23,17 +23,19 @@ block content
 						#uploadButton(class='hvr-fade') 공유하기
 
 		#posts
-			#post1(class='post')
-				#header1(class='post-header')
-				#video1(class='post-video')
-			#post2(class='post')
-				#haeader2(class='post-header')
-				#video2(class='post-video')
-	ul
-		each topic in topics
-			li
-				h2
-					a(href='/'+topic)= topic
+			each PostA in FollowedPosts
+				div(class='post' data-WriterId=PostA.Writer)
+					div(class='post-header')
+						div(class='profileImage')
+						div(class='profileId')=PostA.AuthId
+					div(class='post-video')
+						iframe(
+							width='100%' 
+							height='100%' 
+							src="https://www.youtube.com/embed/"+PostA.VideoId+"?rel=0" 
+							frameborder="0" 
+							allowfullscreen
+						)
 	//	
 		article
 			h2=title
